// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogoBig matches snapshot for custom appName color 1`] = `
<View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/logo-big.png",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "tintColor": undefined,
      }
    }
  />
</View>
`;

exports[`LogoBig matches snapshot for custom logo color 1`] = `
<View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/logo-big.png",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "tintColor": "blue",
      }
    }
  />
</View>
`;
